src/test/compile-fail/invalid-macro-matcher.rs
macro_rules! invalid { //~ ERROR Invalid macro matcher
    _ => ();
}

fn main() {
}
